--- a/meta-delta/meta-agc032a/conf/machine/agc032a.conf
+++ b/meta-delta/meta-agc032a/conf/machine/agc032a.conf
@@ -32,6 +32,7 @@ MACHINE_ESSENTIAL_EXTRA_RDEPENDS += "           \
     kernel-module-i2c                           \
     "
 
+MACHINE_FEATURES += "compute-rest"
 SERIAL_CONSOLES += "115200;ttyS4"
 EXTRA_IMAGE_FEATURES_append = " image-meta "
 FW_ENV_CONFIG_FILE = "fw_env.config.64k"
