[DD-T32C2S] Update ddt32c2s u-boot deconfig.

--- a/meta-delta/meta-ddt32c2s/recipes-bsp/u-boot/files/ddt32c2s_defconfig
+++ b/meta-delta/meta-ddt32c2s/recipes-bsp/u-boot/files/ddt32c2s_defconfig
@@ -94,8 +94,9 @@ CONFIG_CMD_SETEXPR=n
 CONFIG_LOGLEVEL=7
 
 # samantha
-# CONFIG_ENV_IS_IN_FLASH=n
-# CONFIG_MTD_NOR_FLASH=y
+CONFIG_CMD_DRAMTEST=n
+CONFIG_DM_SERIAL=y
+CONFIG_RAM=y
 CONFIG_CMD_FLASH=n
 CONFIG_BOOTARGS="debug console=ttyS4,115200n8 root=/dev/ram rw"
 CONFIG_SPL_SYS_MALLOC_F_LEN=0x3000
