[Delta] ddt32c2s: Fix u-boot boot fail.

--- a/meta-delta/meta-ddt32c2s/recipes-bsp/u-boot/files/ddt32c2s_defconfig
+++ b/meta-delta/meta-ddt32c2s/recipes-bsp/u-boot/files/ddt32c2s_defconfig
@@ -69,7 +69,7 @@ CONFIG_NETDEVICES=y
 CONFIG_DEBUG_UART=y
 CONFIG_DEBUG_UART_BASE=0x1E784000
 CONFIG_DEBUG_UART_CLOCK=24000000
-CONFIG_BOOTDELAY=5
+# CONFIG_BOOTDELAY=5
 CONFIG_SYS_PROMPT="ddt32c2s-boot=> "
 CONFIG_ASPEED_ENABLE_DUAL_BOOT_WATCHDOG=y
 
@@ -91,12 +91,15 @@ CONFIG_CMD_FPGA=n
 CONFIG_CMD_SETEXPR=n
 
 # debug
-CONFIG_LOGLEVEL=7
+CONFIG_LOGLEVEL=4
 
 # samantha
+# CONFIG_ENV_IS_IN_FLASH=n
+# CONFIG_MTD_NOR_FLASH=y
 CONFIG_CMD_DRAMTEST=n
-CONFIG_DM_SERIAL=y
 CONFIG_RAM=y
+CONFIG_DM_SERIAL=y
+# CONFIG_SYS_NS16550_REG_SIZE=-4
 CONFIG_CMD_FLASH=n
 CONFIG_BOOTARGS="debug console=ttyS4,115200n8 root=/dev/ram rw"
 CONFIG_SPL_SYS_MALLOC_F_LEN=0x3000
