[Delta] ddt32c2s : Update recipes-ddt32c2s.

--- a/meta-delta/meta-ddt32c2s/recipes-bsp/u-boot/files/ddt32c2s_defconfig
+++ b/meta-delta/meta-ddt32c2s/recipes-bsp/u-boot/files/ddt32c2s_defconfig
@@ -69,7 +69,7 @@ CONFIG_NETDEVICES=y
 CONFIG_DEBUG_UART=y
 CONFIG_DEBUG_UART_BASE=0x1E784000
 CONFIG_DEBUG_UART_CLOCK=24000000
-# CONFIG_BOOTDELAY=5
+CONFIG_BOOTDELAY=5
 CONFIG_SYS_PROMPT="ddt32c2s-boot=> "
 CONFIG_ASPEED_ENABLE_DUAL_BOOT_WATCHDOG=y
 
@@ -91,7 +91,7 @@ CONFIG_CMD_FPGA=n
 CONFIG_CMD_SETEXPR=n
 
 # debug
-CONFIG_LOGLEVEL=4
+CONFIG_LOGLEVEL=7
 
 # samantha
 # CONFIG_ENV_IS_IN_FLASH=n
