[Delta] ddt32c2s : Update recipes-utils.

--- a/meta-delta/meta-ddt32c2s/recipes-utils/fscd/fscd/FSC-DDT32C2S-config.json
+++ b/meta-delta/meta-ddt32c2s/recipes-utils/fscd/fscd/FSC-DDT32C2S-config.json
@@ -22,7 +22,7 @@
     "profiles": {
       "linear_lf": {
         "read_source" : {
-          "sysfs" : "/sys/bus/i2c/devices/4-004b/hwmon/hwmon*/temp1_input"
+          "sysfs" : "/sys/bus/i2c/devices/1-0049/hwmon/hwmon*/temp1_input"
         },
         "read_limit": {
           "valid": {
@@ -48,7 +48,7 @@
       },
       "linear_rf": {
         "read_source" : {
-          "sysfs" : "/sys/bus/i2c/devices/4-0049/hwmon/hwmon*/temp1_input"
+          "sysfs" : "/sys/bus/i2c/devices/1-004a/hwmon/hwmon*/temp1_input"
         },
         "read_limit": {
           "valid": {
@@ -74,7 +74,7 @@
       },
       "linear_upper_mac": {
         "read_source" : {
-          "sysfs" : "/sys/bus/i2c/devices/4-004a/hwmon/hwmon*/temp1_input"
+          "sysfs" : "/sys/bus/i2c/devices/1-004b/hwmon/hwmon*/temp1_input"
         },
         "read_limit": {
           "valid": {
@@ -100,7 +100,7 @@
       },
       "linear_lower_mac": {
         "read_source" : {
-          "sysfs" : "/sys/bus/i2c/devices/4-004e/hwmon/hwmon*/temp1_input"
+          "sysfs" : "/sys/bus/i2c/devices/1-004e/hwmon/hwmon*/temp1_input"
         },
         "read_limit": {
           "valid": {
@@ -129,128 +129,148 @@
       "1": {
         "label" : "Fan 1 Front",
         "read_source" : {
-          "sysfs": "/sys/bus/i2c/devices/3-002e/fan1_input"
+          "sysfs": "/sys/bus/i2c/devices/2-002d/fan1_input"
         },
         "write_source" : {
-          "sysfs": "/sys/bus/i2c/devices/3-002e/pwm1",
+          "sysfs": "/sys/bus/i2c/devices/2-002d/pwm1",
           "max_duty_register": 255
         }
       },
       "2": {
         "label" : "Fan 1 Rear",
         "read_source" : {
-          "sysfs": "/sys/bus/i2c/devices/3-002e/fan2_input"
+          "sysfs": "/sys/bus/i2c/devices/2-002d/fan2_input"
         },
         "write_source" : {
-          "sysfs": "/sys/bus/i2c/devices/3-002e/pwm2",
+          "sysfs": "/sys/bus/i2c/devices/2-002d/pwm2",
           "max_duty_register": 255
         }
       },
       "3": {
         "label" : "Fan 2 Front",
         "read_source" : {
-          "sysfs": "/sys/bus/i2c/devices/3-004c/fan1_input"
+          "sysfs": "/sys/bus/i2c/devices/2-002d/fan3_input"
         },
         "write_source" : {
-          "sysfs": "/sys/bus/i2c/devices/3-004c/pwm1",
+          "sysfs": "/sys/bus/i2c/devices/2-002d/pwm3",
           "max_duty_register": 255
         }
       },
       "4": {
         "label" : "Fan 2 Rear",
         "read_source" : {
-          "sysfs": "/sys/bus/i2c/devices/3-004c/fan2_input"
+          "sysfs": "/sys/bus/i2c/devices/2-002d/fan4_input"
         },
         "write_source" : {
-          "sysfs": "/sys/bus/i2c/devices/3-004c/pwm2",
+          "sysfs": "/sys/bus/i2c/devices/2-002d/pwm4",
           "max_duty_register": 255
         }
       },
       "5": {
         "label" : "Fan 3 Front",
         "read_source" : {
-          "sysfs": "/sys/bus/i2c/devices/3-004c/fan3_input"
+          "sysfs": "/sys/bus/i2c/devices/2-002d/fan5_input"
         },
         "write_source" : {
-          "sysfs": "/sys/bus/i2c/devices/3-004c/pwm3",
+          "sysfs": "/sys/bus/i2c/devices/2-002d/pwm5",
           "max_duty_register": 255
         }
       },
       "6": {
         "label" : "Fan 3 Rear",
         "read_source" : {
-          "sysfs": "/sys/bus/i2c/devices/3-004c/fan4_input"
+          "sysfs": "/sys/bus/i2c/devices/2-004c/fan1_input"
         },
         "write_source" : {
-          "sysfs": "/sys/bus/i2c/devices/3-004c/pwm4",
+          "sysfs": "/sys/bus/i2c/devices/2-004c/pwm1",
           "max_duty_register": 255
         }
       },
       "7": {
         "label" : "Fan 4 Front",
         "read_source" : {
-          "sysfs": "/sys/bus/i2c/devices/3-004c/fan5_input"
+          "sysfs": "/sys/bus/i2c/devices/2-004c/fan2_input"
         },
         "write_source" : {
-          "sysfs": "/sys/bus/i2c/devices/3-004c/pwm5",
+          "sysfs": "/sys/bus/i2c/devices/2-004c/pwm2",
           "max_duty_register": 255
         }
       },
       "8": {
         "label" : "Fan 4 Rear",
         "read_source" : {
-          "sysfs": "/sys/bus/i2c/devices/3-002d/fan1_input"
+          "sysfs": "/sys/bus/i2c/devices/2-004c/fan3_input"
         },
         "write_source" : {
-          "sysfs": "/sys/bus/i2c/devices/3-002d/pwm1",
+          "sysfs": "/sys/bus/i2c/devices/2-004c/pwm3",
           "max_duty_register": 255
         }
       },
       "9": {
         "label" : "Fan 5 Front",
         "read_source" : {
-          "sysfs": "/sys/bus/i2c/devices/3-002d/fan2_input"
+          "sysfs": "/sys/bus/i2c/devices/2-004c/fan4_input"
         },
         "write_source" : {
-          "sysfs": "/sys/bus/i2c/devices/3-002d/pwm2",
+          "sysfs": "/sys/bus/i2c/devices/2-004c/pwm4",
           "max_duty_register": 255
         }
       },
       "10": {
         "label" : "Fan 5 Rear",
         "read_source" : {
-          "sysfs": "/sys/bus/i2c/devices/3-002d/fan3_input"
+          "sysfs": "/sys/bus/i2c/devices/2-004c/fan5_input"
         },
         "write_source" : {
-          "sysfs": "/sys/bus/i2c/devices/3-002d/pwm3",
+          "sysfs": "/sys/bus/i2c/devices/2-004c/pwm5",
           "max_duty_register": 255
         }
       },
       "11": {
         "label" : "Fan 6 Front",
         "read_source" : {
-          "sysfs": "/sys/bus/i2c/devices/3-002d/fan4_input"
+          "sysfs": "/sys/bus/i2c/devices/2-004d/fan1_input"
         },
         "write_source" : {
-          "sysfs": "/sys/bus/i2c/devices/3-002d/pwm4",
+          "sysfs": "/sys/bus/i2c/devices/2-004d/pwm1",
           "max_duty_register": 255
         }
       },
       "12": {
         "label" : "Fan 6 Rear",
         "read_source" : {
-          "sysfs": "/sys/bus/i2c/devices/3-002d/fan5_input"
+          "sysfs": "/sys/bus/i2c/devices/2-004d/fan2_input"
         },
         "write_source" : {
-          "sysfs": "/sys/bus/i2c/devices/3-002d/pwm5",
+          "sysfs": "/sys/bus/i2c/devices/2-004d/pwm2",
+          "max_duty_register": 255
+        }
+      },
+      "13": {
+        "label" : "Fan 7 Front",
+        "read_source" : {
+          "sysfs": "/sys/bus/i2c/devices/2-004d/fan3_input"
+        },
+        "write_source" : {
+          "sysfs": "/sys/bus/i2c/devices/2-004d/pwm3",
+          "max_duty_register": 255
+        }
+      },
+      "14": {
+        "label" : "Fan 7 Rear",
+        "read_source" : {
+          "sysfs": "/sys/bus/i2c/devices/2-004d/fan4_input"
+        },
+        "write_source" : {
+          "sysfs": "/sys/bus/i2c/devices/2-004d/pwm4",
           "max_duty_register": 255
         }
       }
     },
     "zones": {
       "zone_1": {
-        "pwm_output": [1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12],
-        "expr_file": "zone-agc032a.fsc"
+        "pwm_output": [1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14],
+        "expr_file": "zone-ddt32c2s.fsc"
         }
     }
   }
