--- a/meta-delta/meta-ddt32c2s/recipes-kernel/linux/files/aspeed-bmc-delta-ddt32c2s.dts
+++ b/meta-delta/meta-ddt32c2s/recipes-kernel/linux/files/aspeed-bmc-delta-ddt32c2s.dts
@@ -108,7 +108,7 @@
 			#address-cells = <1>;
 			#size-cells = <1>;
 
-			flash1@4000000 {
+			flash1@0 {
 				reg = <0x4000000 0x8000000>;
 				label = "flash1";
 			};
