--- a/meta-delta/meta-ddt32c2s/recipes-utils/lm_sensors/files/ddt32c2s.conf
+++ b/meta-delta/meta-ddt32c2s/recipes-utils/lm_sensors/files/ddt32c2s.conf
@@ -31,14 +31,16 @@ bus "i2c-10" "ast_i2c.10"
 bus "i2c-11" "ast_i2c.11"
 bus "i2c-12" "ast_i2c.12"
 bus "i2c-13" "ast_i2c.13"
-bus "i2c-14" "i2c-2-mux (chan_id 0)"
-bus "i2c-15" "i2c-2-mux (chan_id 1)"
-bus "i2c-16" "i2c-2-mux (chan_id 2)"
-bus "i2c-17" "i2c-2-mux (chan_id 3)"
-bus "i2c-18" "i2c-2-mux (chan_id 4)"
-bus "i2c-19" "i2c-2-mux (chan_id 5)"
-bus "i2c-20" "i2c-2-mux (chan_id 6)"
-bus "i2c-21" "i2c-2-mux (chan_id 7)"
+bus "i2c-13" "ast_i2c.14"
+bus "i2c-13" "ast_i2c.15"
+bus "i2c-16" "i2c-2-mux (chan_id 0)"
+bus "i2c-17" "i2c-2-mux (chan_id 1)"
+bus "i2c-18" "i2c-2-mux (chan_id 2)"
+bus "i2c-19" "i2c-2-mux (chan_id 3)"
+bus "i2c-20" "i2c-2-mux (chan_id 4)"
+bus "i2c-21" "i2c-2-mux (chan_id 5)"
+bus "i2c-22" "i2c-2-mux (chan_id 6)"
+bus "i2c-23" "i2c-2-mux (chan_id 7)"
 
 # Notes:
 # All the numbers for sensors recalibration come from the schematic or linear calibrate.
@@ -60,15 +62,15 @@ chip "ast_adc_hwmon-isa-0000"
      label in7 "ADC_AVS_1V"
      label in8 "ADC_MAC_1V"
 
-chip "tmp75-i2c-4-4A"
-     label temp1 "SMB TMP75AIDR (RF) Temp"
-
-chip "tmp75-i2c-4-4B"
+chip "tmp75-i2c-1-49"
      label temp1 "SMB TMP75AIDR (LF) Temp"
 
-chip "tmp75-i2c-4-4E"
+chip "tmp75-i2c-1-4A"
+     label temp1 "SMB TMP75AIDR (RF) Temp"
+
+chip "tmp75-i2c-1-4B"
      label temp1 "SMB TMP75AIDR Upper (MAC) Temp"
 
-chip "tmp75-i2c-4-49"
+chip "tmp75-i2c-1-4E"
      label temp1 "SMB TMP75AIDR Lower (MAC) Temp"
 
