--- a/meta-delta/meta-ddt32c2s/conf/machine/ddt32c2s.conf
+++ b/meta-delta/meta-ddt32c2s/conf/machine/ddt32c2s.conf
@@ -32,7 +32,9 @@ MACHINE_ESSENTIAL_EXTRA_RDEPENDS += "           \
     kernel-module-i2c                           \
     "
 
-MACHINE_FEATURES += "compute-rest"
+# This is for old style of rest-api.
+# require conf/machine/include/fb-compute.inc
+
 SERIAL_CONSOLES += "115200;ttyS4"
 EXTRA_IMAGE_FEATURES_append = " image-meta "
 FW_ENV_CONFIG_FILE = "fw_env.config.64k"
