[Delta] ddt32c2s : layer.conf remove honister support, add kirkstone support

--- a/meta-delta/meta-ddt32c2s/conf/layer.conf
+++ b/meta-delta/meta-ddt32c2s/conf/layer.conf
@@ -8,4 +8,4 @@ BBFILES += "${LAYERDIR}/recipes-*/*/*.bb \
 BBFILE_COLLECTIONS += "ddt32c2s"
 BBFILE_PATTERN_ddt32c2s = "^${LAYERDIR}/"
 BBFILE_PRIORITY_ddt32c2s = "20"
-LAYERSERIES_COMPAT_ddt32c2s = "honister dunfell"
+LAYERSERIES_COMPAT_ddt32c2s = "kirkstone dunfell"
