[Delta] ddt32c2s : Update openbmc-delta.conf

--- a/meta-delta/conf/distro/openbmc-delta.conf
+++ b/meta-delta/conf/distro/openbmc-delta.conf
@@ -2,6 +2,7 @@
 
 # Use the base poky distro, but override various parameters.
 require conf/distro/poky.conf
+include conf/distro/openbmc-yocto-${DISTRO_CODENAME}.inc
 
 INHERIT += "fb-source-mirror"
 
