--- a/meta-delta/meta-ddt32c2s/conf/machine/ddt32c2s.conf
+++ b/meta-delta/meta-ddt32c2s/conf/machine/ddt32c2s.conf
@@ -21,6 +21,7 @@ PREFERRED_VERSION_linux-aspeed = "5.10.%"
 PREFERRED_VERSION_libwatchdog = "0.2"
 PREFERRED_VERSION_libipmi = "0.2"
 PREFERRED_VERSION_ipmid = "0.2"
+PREFERRED_VERSION_rest-api = "0.1"
 PREFERRED_VERSION_at93cx6-util = "0.1"
 PREFERRED_VERSION_fscd = "0.3"
 PREFERRED_VERSION_openbmc-gpio = "0.2"
