[Delta] ddt32c2s : Add SYSFPGA kernel module.

--- a/meta-delta/meta-ddt32c2s/conf/machine/ddt32c2s.conf
+++ b/meta-delta/meta-ddt32c2s/conf/machine/ddt32c2s.conf
@@ -31,6 +31,7 @@ MACHINE_ESSENTIAL_EXTRA_RDEPENDS += "           \
     kernel-module-i2c-dev-psu                   \
     kernel-module-cpld                          \
     kernel-module-i2c                           \
+    kernel-module-i2c-dev-sysfpga               \
     "
 
 # This is for old style of rest-api.
