--- a/meta-delta/meta-ddt32c2s/conf/machine/ddt32c2s.conf
+++ b/meta-delta/meta-ddt32c2s/conf/machine/ddt32c2s.conf
@@ -7,12 +7,12 @@ require conf/machine/include/ast2620.inc
 UBOOT_MACHINE:ddt32c2s = "ddt32c2s_defconfig"
 UBOOT_CONFIG_BASE = "fbobmc-ast-g6_defconfig"
 
-PREFERRED_VERSION_u-boot = "v2019.04"
-PREFERRED_VERSION_u-boot-fw-utils = "v2019.04"
-PREFERRED_VERSION_u-boot-fw-utils-cross = "v2019.04"
-PREFERRED_VERSION_u-boot-tools = "v2019.04"
-PREFERRED_VERSION_u-boot-tools-native = "v2019.04"
-PREFERRED_VERSION_nativesdk-u-boot-tools = "v2019.04"
+PREFERRED_VERSION_u-boot = "v2019.04%"
+PREFERRED_VERSION_u-boot-fw-utils = "v2019.04%"
+PREFERRED_VERSION_u-boot-fw-utils-cross = "v2019.04%"
+PREFERRED_VERSION_u-boot-tools = "v2019.04%"
+PREFERRED_VERSION_u-boot-tools-native = "v2019.04%"
+PREFERRED_VERSION_nativesdk-u-boot-tools = "v2019.04%"
 
 KERNEL_IMAGETYPE = "zImage"
 KERNEL_DEVICETREE = "aspeed-bmc-delta-ddt32c2s.dtb"
@@ -29,13 +29,10 @@ PREFERRED_VERSION_openbmc-gpio = "0.2"
 MACHINE_ESSENTIAL_EXTRA_RDEPENDS += "           \
     kernel-module-i2c-dev-sysfs                 \
     kernel-module-i2c-dev-psu                   \
+    kernel-module-i2c-dev-sysfpga               \
     kernel-module-cpld                          \
     kernel-module-i2c                           \
-    kernel-module-i2c-dev-sysfpga               \
     "
-
-# This is for old style of rest-api.
-# require conf/machine/include/fb-compute.inc
 
 require conf/machine/include/tpm2.inc
 
