--- a/meta-delta/conf/distro/openbmc-delta.conf
+++ b/meta-delta/conf/distro/openbmc-delta.conf
@@ -9,6 +9,8 @@ INHERIT += "fb-source-mirror"
 # Save local tarballs for all packages we download.
 # This can be used to update our mirror directory above.
 BB_GENERATE_MIRROR_TARBALLS = "1"
+BB_GENERATE_SHALLOW_TARBALLS ?= "0"
+BB_GIT_SHALLOW ?= "0"
 
 # Do not check reachability as it does not work in our environment
 CONNECTIVITY_CHECK_URIS = ""
