[Delta] ddt32c2s: Change data0 filesystem from jffs2 to ubifs.
Jffs2 cause CRC error very often
Everytime the error occurred, mtd4 would be clear and remount to /mnt/data
We don't want the data in /mnt/data be cleared after every booting
Change the filesystem to ubifs is the best way for now

--- a/meta-delta/meta-ddt32c2s/conf/machine/ddt32c2s.conf
+++ b/meta-delta/meta-ddt32c2s/conf/machine/ddt32c2s.conf
@@ -34,6 +34,7 @@ MACHINE_ESSENTIAL_EXTRA_RDEPENDS += "           \
     "
 
 require conf/machine/include/tpm2.inc
+require conf/machine/include/mtd-ubifs.inc
 
 SERIAL_CONSOLES += "115200;ttyS4"
 EXTRA_IMAGE_FEATURES_append = " image-meta "
