--- a/meta-delta/meta-ddt32c2s/recipes-kernel/linux/files/ddt32c2s.cfg
+++ b/meta-delta/meta-ddt32c2s/recipes-kernel/linux/files/ddt32c2s.cfg
@@ -16,9 +16,8 @@ CONFIG_I2C_SLAVE_MQUEUE_QUEUE_SIZE=32
 CONFIG_I2C_SLAVE_MQUEUE_MESSAGE_SIZE=256
 
 #
-# DELTA-AGC032A
+# DELTA DD-T32C2S
 #
-
 CONFIG_AST_UART_SDMA=y
 CONFIG_AST_CONSOLE_UART_BASE=0x1e784000
 CONFIG_AST_DUAL_FLASH=y
@@ -40,5 +39,7 @@ CONFIG_DEBUG_UART_VIRT=0xf8183000
 CONFIG_IGB=y
 CONFIG_IGB_DCA=y
 
-
-
+#
+# UBIFS requires 15 KiB as a minimum.
+#
+CONFIG_MTD_SPI_NOR_USE_4K_SECTORS=n
