[Delta] ddt32c2s: sys-FPGA: Revise sysfpga module.

--- a/meta-delta/meta-ddt32c2s/recipes-kernel/i2c-dev-sysfpga-mod/files/Makefile
+++ b/meta-delta/meta-ddt32c2s/recipes-kernel/i2c-dev-sysfpga-mod/files/Makefile
@@ -15,14 +15,16 @@
 # 51 Franklin Street, Fifth Floor,
 # Boston, MA 02110-1301 USA
 
-obj-m := delta_sysfpga.o
+MODULE_NAME       = delta_sysfpga
+obj-m 			 := ${MODULE_NAME}.o
+${MODULE_NAME}-y := sysfpga.o
 
 ccflags-y += -I$(KERNEL_EXTRA_HEADER_PATH)
 
 SRC := $(shell pwd)
 
 all:
-	$(MAKE) -C $(KERNEL_SRC) M=$(SRC)
+	$(MAKE) -C $(KERNEL_SRC) M=$(SRC) modules
 
 modules_install:
 	$(MAKE) -C $(KERNEL_SRC) M=$(SRC) modules_install
