[Delta] ddt32c2s: sysfpga: Add new adapter for cpld (unfinished)
Accessing port-pld, which needs to set sysfpga registers first then read back data,
is a very troublesome action. Thus, we emulate the i2c master in sysfpga as a new
i2c adapter to r/w prot-pld faster and more convenient.

Also, we add sysfpga in kernel dts since its a necessary device.

--- a/meta-delta/meta-ddt32c2s/recipes-kernel/i2c-dev-sysfpga-mod/files/Makefile
+++ b/meta-delta/meta-ddt32c2s/recipes-kernel/i2c-dev-sysfpga-mod/files/Makefile
@@ -17,7 +17,7 @@
 
 MODULE_NAME       = delta_sysfpga
 obj-m 			 := ${MODULE_NAME}.o
-${MODULE_NAME}-y := sysfpga.o
+${MODULE_NAME}-y := sysfpga.o sysfpga_i2c.o
 
 ccflags-y += -I$(KERNEL_EXTRA_HEADER_PATH)
 
