[Delta] ddt32c2s: Add portpld kernel driver as a kernel module
Port-pldA & port-pldB are slave devices of sys-fpga. We add a kernel driver
to access port-pld's registers under file system.
Also, add i2c device in setup_i2c.sh to autoprobe plds while booting.

--- a/meta-delta/meta-ddt32c2s/conf/machine/ddt32c2s.conf
+++ b/meta-delta/meta-ddt32c2s/conf/machine/ddt32c2s.conf
@@ -31,6 +31,7 @@ MACHINE_ESSENTIAL_EXTRA_RDEPENDS += "           \
     kernel-module-i2c-dev-psu                   \
     kernel-module-i2c-dev-sysfpga               \
     kernel-module-i2c                           \
+    kernel-module-cpld                          \
     "
 
 require conf/machine/include/tpm2.inc
